# iCub-yoga-trainer

./: CMakeLists.txt  README.md
yogaRecognition/src/: analyze_outcomes.py  body.py  demo_yoga.py  extract_pose.py  pose.py  trainer.py  trainer_showCorrection.py  user_profile.py  util.py  yogaYarp.py  yogaYarp_showCorrection.py
yogaRecognition/yoga_poses/level_1/: aeroplano_pose.txt  granchio_pose.txt  guerriero_pose.txt
yogaRecognition/yoga_poses/level_2/: albero_pose.txt  fenicottero_pose.txt  lottatore_pose.txt
yogaRecognition/yoga_poses/level_3/: cactus_pose.txt  ruota_pose.txt  triangolo_pose.txt
yogaSupervisor/: CMakeLists.txt
yogaSupervisor/app/: CMakeLists.txt
yogaSupervisor/app/conf/: init_exp.txt  presentation_phase_known.txt  presentation_phase_unknown.txt  training_intro.txt  yogaSupervisor.ini
yogaSupervisor/app/scripts/: game_motion.sh  yogaTeacher.xml
yogaSupervisor/include/: yogaSupervisor.h
yogaSupervisor/src/: main.cpp  yogaSupervisor.cpp
